--- a/js/data/locale/localematch.json
+++ b/js/data/locale/localematch.json
@@ -5528,7 +5528,221 @@
         "tlh": "tlh-Piqd",
         "tlh-Piqd": "tlh-Piqd",
         "tlh-PIQD": "tlh-Piqd",
-        "Piqd-PIQD": "tlh-Piqd"
+        "Piqd-PIQD": "tlh-Piqd",
+        "ar-DJ": "ar-Arab-DJ",
+        "und-ar-DJ": "ar-Arab-DJ",
+        "ar-AR-DJ": "ar-Arab-DJ",
+        "Arab-AR-DJ": "ar-Arab-DJ",
+        "und-bs-BA": "bs-Latn-BA",
+        "bs-BS-BA": "bs-Latn-BA",
+        "Latn-BS-BA": "bs-Latn-BA",
+        "und-de-AT": "de-Latn-AT",
+        "de-DE-AT": "de-Latn-AT",
+        "Latn-DE-AT": "de-Latn-AT",
+        "de-LU": "de-Latn-LU",
+        "und-de-LU": "de-Latn-LU",
+        "de-DE-LU": "de-Latn-LU",
+        "Latn-DE-LU": "de-Latn-LU",
+        "und-el-GR": "el-Grek-GR",
+        "el-EL-GR": "el-Grek-GR",
+        "Grek-EL-GR": "el-Grek-GR",
+        "en-AM": "en-Latn-AM",
+        "und-en-AM": "en-Latn-AM",
+        "en-EN-AM": "en-Latn-AM",
+        "Latn-EN-AM": "en-Latn-AM",
+        "en-AZ": "en-Latn-AZ",
+        "und-en-AZ": "en-Latn-AZ",
+        "en-EN-AZ": "en-Latn-AZ",
+        "Latn-EN-AZ": "en-Latn-AZ",
+        "en-CN": "en-Latn-CN",
+        "und-en-CN": "en-Latn-CN",
+        "en-EN-CN": "en-Latn-CN",
+        "Latn-EN-CN": "en-Latn-CN",
+        "en-ET": "en-Latn-ET",
+        "und-en-ET": "en-Latn-ET",
+        "en-EN-ET": "en-Latn-ET",
+        "Latn-EN-ET": "en-Latn-ET",
+        "en-GE": "en-Latn-GE",
+        "und-en-GE": "en-Latn-GE",
+        "en-EN-GE": "en-Latn-GE",
+        "Latn-EN-GE": "en-Latn-GE",
+        "en-IS": "en-Latn-IS",
+        "und-en-IS": "en-Latn-IS",
+        "en-EN-IS": "en-Latn-IS",
+        "Latn-EN-IS": "en-Latn-IS",
+        "en-JP": "en-Latn-JP",
+        "und-en-JP": "en-Latn-JP",
+        "en-EN-JP": "en-Latn-JP",
+        "Latn-EN-JP": "en-Latn-JP",
+        "en-LK": "en-Latn-LK",
+        "und-en-LK": "en-Latn-LK",
+        "en-EN-LK": "en-Latn-LK",
+        "Latn-EN-LK": "en-Latn-LK",
+        "en-MM": "en-Latn-MM",
+        "und-en-MM": "en-Latn-MM",
+        "en-EN-MM": "en-Latn-MM",
+        "Latn-EN-MM": "en-Latn-MM",
+        "en-MX": "en-Latn-MX",
+        "und-en-MX": "en-Latn-MX",
+        "en-EN-MX": "en-Latn-MX",
+        "Latn-EN-MX": "en-Latn-MX",
+        "en-MY": "en-Latn-MY",
+        "und-en-MY": "en-Latn-MY",
+        "en-EN-MY": "en-Latn-MY",
+        "Latn-EN-MY": "en-Latn-MY",
+        "en-PH": "en-Latn-PH",
+        "und-en-PH": "en-Latn-PH",
+        "en-EN-PH": "en-Latn-PH",
+        "Latn-EN-PH": "en-Latn-PH",
+        "en-PK": "en-Latn-PK",
+        "und-en-PK": "en-Latn-PK",
+        "en-EN-PK": "en-Latn-PK",
+        "Latn-EN-PK": "en-Latn-PK",
+        "en-PR": "en-Latn-PR",
+        "und-en-PR": "en-Latn-PR",
+        "en-EN-PR": "en-Latn-PR",
+        "Latn-EN-PR": "en-Latn-PR",
+        "en-RW": "en-Latn-RW",
+        "und-en-RW": "en-Latn-RW",
+        "en-EN-RW": "en-Latn-RW",
+        "Latn-EN-RW": "en-Latn-RW",
+        "en-SD": "en-Latn-SD",
+        "und-en-SD": "en-Latn-SD",
+        "en-EN-SD": "en-Latn-SD",
+        "Latn-EN-SD": "en-Latn-SD",
+        "en-TW": "en-Latn-TW",
+        "und-en-TW": "en-Latn-TW",
+        "en-EN-TW": "en-Latn-TW",
+        "Latn-EN-TW": "en-Latn-TW",
+        "en-TZ": "en-Latn-TZ",
+        "und-en-TZ": "en-Latn-TZ",
+        "en-EN-TZ": "en-Latn-TZ",
+        "Latn-EN-TZ": "en-Latn-TZ",
+        "es-CA": "es-Latn-CA",
+        "und-es-CA": "es-Latn-CA",
+        "es-ES-CA": "es-Latn-CA",
+        "Latn-ES-CA": "es-Latn-CA",
+        "es-PH": "es-Latn-PH",
+        "und-es-PH": "es-Latn-PH",
+        "es-ES-PH": "es-Latn-PH",
+        "Latn-ES-PH": "es-Latn-PH",
+        "es-US": "es-Latn-US",
+        "und-es-US": "es-Latn-US",
+        "es-ES-US": "es-Latn-US",
+        "Latn-ES-US": "es-Latn-US",
+        "und-et-EE": "et-Latn-EE",
+        "et-ET-EE": "et-Latn-EE",
+        "Latn-ET-EE": "et-Latn-EE",
+        "fr-BE": "fr-Latn-BE",
+        "und-fr-BE": "fr-Latn-BE",
+        "fr-FR-BE": "fr-Latn-BE",
+        "Latn-FR-BE": "fr-Latn-BE",
+        "fr-CH": "fr-Latn-CH",
+        "und-fr-CH": "fr-Latn-CH",
+        "fr-FR-CH": "fr-Latn-CH",
+        "Latn-FR-CH": "fr-Latn-CH",
+        "fr-GQ": "fr-Latn-GQ",
+        "und-fr-GQ": "fr-Latn-GQ",
+        "fr-FR-GQ": "fr-Latn-GQ",
+        "Latn-FR-GQ": "fr-Latn-GQ",
+        "fr-DJ": "fr-Latn-DJ",
+        "und-fr-DJ": "fr-Latn-DJ",
+        "fr-FR-DJ": "fr-Latn-DJ",
+        "Latn-FR-DJ": "fr-Latn-DJ",
+        "fr-DZ": "fr-Latn-DZ",
+        "und-fr-DZ": "fr-Latn-DZ",
+        "fr-FR-DZ": "fr-Latn-DZ",
+        "Latn-FR-DZ": "fr-Latn-DZ",
+        "fr-LB": "fr-Latn-LB",
+        "und-fr-LB": "fr-Latn-LB",
+        "fr-FR-LB": "fr-Latn-LB",
+        "Latn-FR-LB": "fr-Latn-LB",
+        "fr-RW": "fr-Latn-RW",
+        "und-fr-RW": "fr-Latn-RW",
+        "fr-FR-RW": "fr-Latn-RW",
+        "Latn-FR-RW": "fr-Latn-RW",
+        "und-ha-NG": "fr-Latn-NG",
+        "fr-HA-NG": "fr-Latn-NG",
+        "Latn-HA-NG": "fr-Latn-NG",
+        "it-CH": "it-Latn-CH",
+        "und-it-CH": "it-Latn-CH",
+        "it-IT-CH": "it-Latn-CH",
+        "Latn-IT-CH": "it-Latn-CH",
+        "und-kk-KZ": "kk-Cyrl-KZ",
+        "kk-KK-KZ": "kk-Cyrl-KZ",
+        "Cyrl-KK-KZ": "kk-Cyrl-KZ",
+        "und-ms-MY": "ms-Latn-MY",
+        "ms-MS-MY": "ms-Latn-MY",
+        "Latn-MS-MY": "ms-Latn-MY",
+        "ms-SG": "ms-Latn-SG",
+        "und-ms-SG": "ms-Latn-SG",
+        "ms-MS-SG": "ms-Latn-SG",
+        "Latn-MS-SG": "ms-Latn-SG",
+        "und-nl-BE": "nl-Latn-BE",
+        "nl-NL-BE": "nl-Latn-BE",
+        "Latn-NL-BE": "nl-Latn-BE",
+        "und-pa-IN": "pa-Guru-IN",
+        "pa-PA-IN": "pa-Guru-IN",
+        "Guru-PA-IN": "pa-Guru-IN",
+        "und-pa-PK": "pa-Arab-PK",
+        "pa-PA-PK": "pa-Arab-PK",
+        "Arab-PA-PK": "pa-Arab-PK",
+        "pt-GQ": "pt-Latn-GQ",
+        "und-pt-GQ": "pt-Latn-GQ",
+        "pt-PT-GQ": "pt-Latn-GQ",
+        "Latn-PT-GQ": "pt-Latn-GQ",
+        "ru-BY": "ru-Cyrl-BY",
+        "und-ru-BY": "ru-Cyrl-BY",
+        "ru-RU-BY": "ru-Cyrl-BY",
+        "Cyrl-RU-BY": "ru-Cyrl-BY",
+        "ru-GE": "ru-Cyrl-GE",
+        "und-ru-GE": "ru-Cyrl-GE",
+        "ru-RU-GE": "ru-Cyrl-GE",
+        "Cyrl-RU-GE": "ru-Cyrl-GE",
+        "ru-KG": "ru-Cyrl-KG",
+        "und-ru-KG": "ru-Cyrl-KG",
+        "ru-RU-KG": "ru-Cyrl-KG",
+        "Cyrl-RU-KG": "ru-Cyrl-KG",
+        "ru-UA": "ru-Cyrl-UA",
+        "und-ru-UA": "ru-Cyrl-UA",
+        "ru-RU-UA": "ru-Cyrl-UA",
+        "Cyrl-RU-UA": "ru-Cyrl-UA",
+        "sq-ME": "sq-Latn-ME",
+        "und-sq-ME": "sq-Latn-ME",
+        "sq-SQ-ME": "sq-Latn-ME",
+        "Latn-SQ-ME": "sq-Latn-ME",
+        "sv-FI": "sv-Latn-FI",
+        "und-sv-FI": "sv-Latn-FI",
+        "sv-SV-FI": "sv-Latn-FI",
+        "Latn-SV-FI": "sv-Latn-FI",
+        "und-sv-SE": "sv-Latn-SE",
+        "sv-SV-SE": "sv-Latn-SE",
+        "Latn-SV-SE": "sv-Latn-SE",
+        "tr-AM": "tr-Latn-AM",
+        "und-tr-AM": "tr-Latn-AM",
+        "tr-TR-AM": "tr-Latn-AM",
+        "Latn-TR-AM": "tr-Latn-AM",
+        "tr-AZ": "tr-Latn-AZ",
+        "und-tr-AZ": "tr-Latn-AZ",
+        "tr-TR-AZ": "tr-Latn-AZ",
+        "Latn-TR-AZ": "tr-Latn-AZ",
+        "tr-CY": "tr-Latn-CY",
+        "und-tr-CY": "tr-Latn-CY",
+        "tr-TR-CY": "tr-Latn-CY",
+        "Latn-TR-CY": "tr-Latn-CY",
+        "und-uk-UA": "uk-Cyrl-UA",
+        "uk-UK-UA": "uk-Cyrl-UA",
+        "Cyrl-UK-UA": "uk-Cyrl-UA",
+        "ur-IN": "ur-Arab-IN",
+        "und-ur-IN": "ur-Arab-IN",
+        "ur-UR-IN": "ur-Arab-IN",
+        "Arab-UR-IN": "ur-Arab-IN",
+        "und-ur-PK": "ur-Arab-PK",
+        "ur-UR-PK": "ur-Arab-PK",
+        "Arab-UR-PK": "ur-Arab-PK",
+        "und-uz-UZ": "uz-Latn-UA",
+        "uz-UZ-UZ": "uz-Latn-UA",
+        "Latn-UZ-UZ": "uz-Latn-UA"
     },
     "territoryContainment": {
         "142": [
