Fix problems caused by the merge from development
Now the genlikelyloc.js produces sane output, and the unit tests
are correct and pass.

--- a/js/data/locale/localematch.json
+++ b/js/data/locale/localematch.json
@@ -48,7 +48,7 @@
         "AZ": "az-Latn-AZ",
         "Adlm": "ff-Adlm-GN",
         "Afak": "djk-Afak-SR",
-        "Afak-AFAK": "djk-Afak-SR",
+        "Afak-SR": "djk-Afak-SR",
         "Aghb": "lez-Aghb-RU",
         "Ahom": "aho-Ahom-IN",
         "Arab": "ar-Arab-EG",
@@ -57,6 +57,7 @@
         "Arab-BH": "ar-Arab-BH",
         "Arab-CC": "ms-Arab-CC",
         "Arab-CN": "ug-Arab-CN",
+        "Arab-DJ": "ar-Arab-DJ",
         "Arab-DZ": "ar-Arab-DZ",
         "Arab-EG": "ar-Arab-EG",
         "Arab-EH": "ar-Arab-EH",
@@ -93,7 +94,7 @@
         "Arab-YE": "ar-Arab-YE",
         "Arab-YT": "swb-Arab-YT",
         "Aran": "fa-Aran-IR",
-        "Aran-ARAN": "fa-Aran-IR",
+        "Aran-IR": "fa-Aran-IR",
         "Armi": "arc-Armi-IR",
         "Armn": "hy-Armn-AM",
         "Avst": "ae-Avst-IR",
@@ -179,7 +180,7 @@
         "Cyrl-UA": "uk-Cyrl-UA",
         "Cyrl-XK": "sr-Cyrl-XK",
         "Cyrs": "ru-Cyrs-RU",
-        "Cyrs-CYRS": "ru-Cyrs-RU",
+        "Cyrs-RU": "ru-Cyrs-RU",
         "DE": "de-Latn-DE",
         "DG": "en-Latn-DG",
         "DJ": "aa-Latn-DJ",
@@ -194,10 +195,9 @@
         "Deva-NP": "ne-Deva-NP",
         "Deva-PK": "btv-Deva-PK",
         "Dogr": "doi-Dogr-IN",
-        "Dogr-DOGR": "doi-Dogr-IN",
+        "Dogr-IN": "doi-Dogr-IN",
         "Dsrt": "en-Dsrt-US",
-        "Dsrt-DSRT": "en-Dsrt-US",
-        "Dsrt-EN-DSRT": "en-Dsrt-US",
+        "Dsrt-US": "en-Dsrt-US",
         "Dupl": "fr-Dupl-FR",
         "EA": "es-Latn-EA",
         "EC": "es-Latn-EC",
@@ -240,12 +240,12 @@
         "GW": "pt-Latn-GW",
         "GY": "en-Latn-GY",
         "Geok": "ka-Geok-GE",
-        "Geok-GEOK": "ka-Geok-GE",
+        "Geok-GE": "ka-Geok-GE",
         "Geor": "ka-Geor-GE",
         "Geor-GE": "ka-Geor-GE",
         "Glag": "cu-Glag-BG",
         "Gong": "wsg-Gong-IN",
-        "Gong-GONG": "ka-Gong-GE",
+        "Gong-GE": "ka-Gong-GE",
         "Gonm": "esg-Gonm-IN",
         "Goth": "got-Goth-UA",
         "Gran": "sa-Gran-IN",
@@ -254,6 +254,7 @@
         "Grek-TR": "bgx-Grek-TR",
         "Gujr": "gu-Gujr-IN",
         "Guru": "pa-Guru-IN",
+        "Guru-IN": "pa-Guru-IN",
         "HK": "zh-Hant-HK",
         "HM": "und-Latn-HM",
         "HN": "es-Latn-HN",
@@ -270,7 +271,6 @@
         "Hant-MO": "zh-Hant-MO",
         "Hatr": "mis-Hatr-IQ",
         "Hebr": "he-Hebr-IL",
-        "Hebr-AR-HEBR": "ar-Hebr-IL",
         "Hebr-CA": "yi-Hebr-CA",
         "Hebr-GB": "yi-Hebr-GB",
         "Hebr-IL": "he-Hebr-IL",
@@ -281,7 +281,7 @@
         "Hluw": "hlu-Hluw-TR",
         "Hmng": "hnj-Hmng-LA",
         "Hrkt": "ja-Hrkt-JP",
-        "Hrkt-HRKT": "ja-Hrkt-JP",
+        "Hrkt-JP": "ja-Hrkt-JP",
         "Hung": "hu-Hung-HU",
         "IC": "es-Latn-IC",
         "ID": "id-Latn-ID",
@@ -444,14 +444,16 @@
         "Latn-IT": "it-Latn-IT",
         "Latn-JE": "en-Latn-JE",
         "Latn-JM": "en-Latn-JM",
+        "Latn-JP": "en-Latn-JP",
         "Latn-KE": "en-Latn-KE",
         "Latn-KI": "en-Latn-KI",
         "Latn-KM": "fr-Latn-KM",
         "Latn-KN": "en-Latn-KN",
         "Latn-KY": "en-Latn-KY",
-        "Latn-LATN": "en-Latn-US",
+        "Latn-LB": "fr-Latn-LB",
         "Latn-LC": "en-Latn-LC",
         "Latn-LI": "de-Latn-LI",
+        "Latn-LK": "en-Latn-LK",
         "Latn-LR": "en-Latn-LR",
         "Latn-LS": "st-Latn-LS",
         "Latn-LT": "lt-Latn-LT",
@@ -460,6 +462,7 @@
         "Latn-MA": "fr-Latn-MA",
         "Latn-MC": "fr-Latn-MC",
         "Latn-MD": "ro-Latn-MD",
+        "Latn-ME": "sq-Latn-ME",
         "Latn-MF": "fr-Latn-MF",
         "Latn-MG": "mg-Latn-MG",
         "Latn-MH": "en-Latn-MH",
@@ -493,6 +496,7 @@
         "Latn-PF": "fr-Latn-PF",
         "Latn-PG": "en-Latn-PG",
         "Latn-PH": "tl-Latn-PH",
+        "Latn-PK": "en-Latn-PK",
         "Latn-PL": "pl-Latn-PL",
         "Latn-PM": "fr-Latn-PM",
         "Latn-PN": "en-Latn-PN",
@@ -506,6 +510,7 @@
         "Latn-RW": "rw-Latn-RW",
         "Latn-SB": "en-Latn-SB",
         "Latn-SC": "crs-Latn-SC",
+        "Latn-SD": "en-Latn-SD",
         "Latn-SE": "sv-Latn-SE",
         "Latn-SG": "en-Latn-SG",
         "Latn-SH": "en-Latn-SH",
@@ -557,7 +562,6 @@
         "Latn-ZA": "en-Latn-ZA",
         "Latn-ZM": "en-Latn-ZM",
         "Latn-ZW": "sn-Latn-ZW",
-        "Latn-ZXX": "zxx-Latn-XX",
         "Lepc": "lep-Lepc-IN",
         "Limb": "lif-Limb-IN",
         "Lina": "lab-Lina-GR",
@@ -651,8 +655,8 @@
         "Phli": "pal-Phli-IR",
         "Phlp": "pal-Phlp-CN",
         "Phnx": "phn-Phnx-LB",
-        "Piqd": "tlh-Piqd",
-        "Piqd-PIQD": "tlh-Piqd",
+        "Piqd": "tlh-Piqd-XX",
+        "Piqd-XX": "tlh-Piqd-XX",
         "Plrd": "hmd-Plrd-CN",
         "Prti": "xpr-Prti-IR",
         "QA": "ar-Arab-QA",
@@ -939,7 +943,6 @@
         "apz-ZZ": "apz-Latn-ZZ",
         "ar": "ar-Arab-EG",
         "ar-AE": "ar-Arab-AE",
-        "ar-AR-HEBR": "ar-Hebr-IL",
         "ar-Arab": "ar-Arab-EG",
         "ar-BH": "ar-Arab-BH",
         "ar-DJ": "ar-Arab-DJ",
@@ -947,6 +950,7 @@
         "ar-EG": "ar-Arab-EG",
         "ar-EH": "ar-Arab-EH",
         "ar-Hebr": "ar-Hebr-IL",
+        "ar-IL": "ar-Hebr-IL",
         "ar-IQ": "ar-Arab-IQ",
         "ar-JO": "ar-Arab-JO",
         "ar-KM": "ar-Arab-KM",
@@ -1640,8 +1644,8 @@
         "dje-Latn": "dje-Latn-NE",
         "dje-NE": "dje-Latn-NE",
         "djk": "djk-Afak-SR",
-        "djk-AFAK": "djk-Afak-SR",
         "djk-Afak": "djk-Afak-SR",
+        "djk-SR": "djk-Afak-SR",
         "dnj": "dnj-Latn-CI",
         "dnj-CI": "dnj-Latn-CI",
         "dnj-Latn": "dnj-Latn-CI",
@@ -1650,7 +1654,6 @@
         "dob-ZZ": "dob-Latn-ZZ",
         "doi": "doi-Arab-IN",
         "doi-Arab": "doi-Arab-IN",
-        "doi-DOGR": "doi-Dogr-IN",
         "doi-Dogr": "doi-Dogr-IN",
         "doi-IN": "doi-Arab-IN",
         "dop": "dop-Latn-ZZ",
@@ -1763,9 +1766,7 @@
         "en-CY": "en-Latn-CY",
         "en-DG": "en-Latn-DG",
         "en-DM": "en-Latn-DM",
-        "en-DSRT": "en-Dsrt-US",
         "en-Dsrt": "en-Dsrt-US",
-        "en-EN-DSRT": "en-Dsrt-US",
         "en-ET": "en-Latn-ET",
         "en-FJ": "en-Latn-FJ",
         "en-FK": "en-Latn-FK",
@@ -1794,7 +1795,6 @@
         "en-KI": "en-Latn-KI",
         "en-KN": "en-Latn-KN",
         "en-KY": "en-Latn-KY",
-        "en-LATN": "en-Latn-US",
         "en-LC": "en-Latn-LC",
         "en-LK": "en-Latn-LK",
         "en-LR": "en-Latn-LR",
@@ -1915,7 +1915,6 @@
         "ext-Latn": "ext-Latn-ES",
         "fa": "fa-Arab-IR",
         "fa-AF": "fa-Arab-AF",
-        "fa-ARAN": "fa-Aran-IR",
         "fa-Arab": "fa-Arab-IR",
         "fa-Aran": "fa-Aran-IR",
         "fa-IR": "fa-Arab-IR",
@@ -2014,6 +2013,7 @@
         "fr-MQ": "fr-Latn-MQ",
         "fr-NC": "fr-Latn-NC",
         "fr-NE": "fr-Latn-NE",
+        "fr-NG": "fr-Latn-NG",
         "fr-PF": "fr-Latn-PF",
         "fr-PM": "fr-Latn-PM",
         "fr-RE": "fr-Latn-RE",
@@ -2515,7 +2515,6 @@
         "izi-Latn": "izi-Latn-ZZ",
         "izi-ZZ": "izi-Latn-ZZ",
         "ja": "ja-Jpan-JP",
-        "ja-HRKT": "ja-Hrkt-JP",
         "ja-Hrkt": "ja-Hrkt-JP",
         "ja-JP": "ja-Jpan-JP",
         "ja-Jpan": "ja-Jpan-JP",
@@ -2566,8 +2565,6 @@
         "jw-Latn": "jw-Latn-ID",
         "ka": "ka-Geor-GE",
         "ka-GE": "ka-Geor-GE",
-        "ka-GEOK": "ka-Geok-GE",
-        "ka-GONG": "ka-Gong-GE",
         "ka-Geok": "ka-Geok-GE",
         "ka-Geor": "ka-Geor-GE",
         "ka-Gong": "ka-Gong-GE",
@@ -3999,7 +3996,6 @@
         "rtm-Latn": "rtm-Latn-FJ",
         "ru": "ru-Cyrl-RU",
         "ru-BY": "ru-Cyrl-BY",
-        "ru-CYRS": "ru-Cyrs-RU",
         "ru-Cyrl": "ru-Cyrl-RU",
         "ru-Cyrs": "ru-Cyrs-RU",
         "ru-GE": "ru-Cyrl-GE",
@@ -4486,9 +4482,9 @@
         "tlf": "tlf-Latn-ZZ",
         "tlf-Latn": "tlf-Latn-ZZ",
         "tlf-ZZ": "tlf-Latn-ZZ",
-        "tlh": "tlh-Piqd",
-        "tlh-PIQD": "tlh-Piqd",
-        "tlh-Piqd": "tlh-Piqd",
+        "tlh": "tlh-Piqd-XX",
+        "tlh-Piqd": "tlh-Piqd-XX",
+        "tlh-XX": "tlh-Piqd-XX",
         "tlx": "tlx-Latn-ZZ",
         "tlx-Latn": "tlx-Latn-ZZ",
         "tlx-ZZ": "tlx-Latn-ZZ",
@@ -4699,7 +4695,6 @@
         "und-AX": "sv-Latn-AX",
         "und-AZ": "az-Latn-AZ",
         "und-Adlm": "ff-Adlm-GN",
-        "und-Afak": "djk-Afak-SR",
         "und-Aghb": "lez-Aghb-RU",
         "und-Ahom": "aho-Ahom-IN",
         "und-Arab": "ar-Arab-EG",
@@ -4719,7 +4714,6 @@
         "und-Arab-TJ": "fa-Arab-TJ",
         "und-Arab-TR": "az-Arab-TR",
         "und-Arab-YT": "swb-Arab-YT",
-        "und-Aran": "fa-Aran-IR",
         "und-Armi": "arc-Armi-IR",
         "und-Armn": "hy-Armn-AM",
         "und-Avst": "ae-Avst-IR",
@@ -4792,7 +4786,6 @@
         "und-Cyrl-SK": "uk-Cyrl-SK",
         "und-Cyrl-TR": "kbd-Cyrl-TR",
         "und-Cyrl-XK": "sr-Cyrl-XK",
-        "und-Cyrs": "ru-Cyrs-RU",
         "und-DE": "de-Latn-DE",
         "und-DG": "en-Latn-DG",
         "und-DJ": "aa-Latn-DJ",
@@ -4806,7 +4799,6 @@
         "und-Deva-MU": "bho-Deva-MU",
         "und-Deva-PK": "btv-Deva-PK",
         "und-Dogr": "doi-Dogr-IN",
-        "und-Dsrt": "en-Dsrt-US",
         "und-Dupl": "fr-Dupl-FR",
         "und-EA": "es-Latn-EA",
         "und-EC": "es-Latn-EC",
@@ -4846,7 +4838,6 @@
         "und-GU": "en-Latn-GU",
         "und-GW": "pt-Latn-GW",
         "und-GY": "en-Latn-GY",
-        "und-Geok": "ka-Geok-GE",
         "und-Geor": "ka-Geor-GE",
         "und-Glag": "cu-Glag-BG",
         "und-Gong": "wsg-Gong-IN",
@@ -4879,7 +4870,6 @@
         "und-Hira": "ja-Hira-JP",
         "und-Hluw": "hlu-Hluw-TR",
         "und-Hmng": "hnj-Hmng-LA",
-        "und-Hrkt": "ja-Hrkt-JP",
         "und-Hung": "hu-Hung-HU",
         "und-IC": "es-Latn-IC",
         "und-ID": "id-Latn-ID",
@@ -5045,7 +5035,6 @@
         "und-Phli": "pal-Phli-IR",
         "und-Phlp": "pal-Phlp-CN",
         "und-Phnx": "phn-Phnx-LB",
-        "und-Piqd": "tlh-Piqd",
         "und-Plrd": "hmd-Plrd-CN",
         "und-Prti": "xpr-Prti-IR",
         "und-QA": "ar-Arab-QA",
@@ -5157,9 +5146,6 @@
         "und-ZM": "en-Latn-ZM",
         "und-ZW": "sn-Latn-ZW",
         "und-Zanb": "cmg-Zanb-MN",
-        "und-ar-Hebr": "ar-Hebr-IL",
-        "und-en-Dsrt": "en-Dsrt-US",
-        "und-zxx": "zxx-Latn-XX",
         "unr": "unr-Beng-IN",
         "unr-Beng": "unr-Beng-IN",
         "unr-Deva": "unr-Deva-NP",
@@ -5568,7 +5554,6 @@
         "zxx": "zxx-Latn-XX",
         "zxx-Latn": "zxx-Latn-XX",
         "zxx-XX": "zxx-Latn-XX",
-        "zxx-ZXX": "zxx-Latn-XX",
         "zza": "zza-Latn-TR",
         "zza-Latn": "zza-Latn-TR",
         "zza-TR": "zza-Latn-TR"
