--- a/js/data/locale/ja/name.json
+++ b/js/data/locale/ja/name.json
@@ -1,7 +1,8 @@
 {
 	"components": {
 		"formal_short": "sf",
-		"formal_long": "sgf"
+		"formal_long": "sgf",
+		"familiar": "sgf"
 	},
     "format": "{prefix}{familyName}{middleName}{givenName}{suffix}",
     "nameStyle": "asian",
