Add formality for Czech and Slovak
Czech and Slovak are more formal like German.

--- a/js/data/locale/cs/name.json
+++ b/js/data/locale/cs/name.json
@@ -1,5 +1,8 @@
 {
     "format": "{prefix} {givenName} {middleName} {familyName} {suffix}",
+    "components": {
+        "familiar": "pf"
+    },
     "sortByHeadWord": false,
     "nameStyle": "western",
     "conjunctions": {
