Added missing likely locale for hr-ME

--- a/js/data/locale/localematch.json
+++ b/js/data/locale/localematch.json
@@ -2374,6 +2374,7 @@
         "hr": "hr-Latn-HR",
         "hr-HR": "hr-Latn-HR",
         "hr-Latn": "hr-Latn-HR",
+        "hr-ME": "hr-Latn-ME",
         "hsb": "hsb-Latn-DE",
         "hsb-DE": "hsb-Latn-DE",
         "hsb-Latn": "hsb-Latn-DE",
