--- a/js/data/locale/rangeToScript.json
+++ b/js/data/locale/rangeToScript.json
@@ -190,14 +190,6 @@
     [
         "Armn",
         1369,
-        1416
-    ],
-    [
-        "Zyyy",
-        1417
-    ],
-    [
-        "Armn",
         1418
     ],
     [
@@ -368,7 +360,7 @@
     [
         "Arab",
         2230,
-        2237
+        2247
     ],
     [
         "Arab",
@@ -675,7 +667,7 @@
     ],
     [
         "Orya",
-        2902,
+        2901,
         2903
     ],
     [
@@ -897,11 +889,6 @@
     [
         "Mlym",
         3328,
-        3331
-    ],
-    [
-        "Mlym",
-        3333,
         3340
     ],
     [
@@ -936,7 +923,7 @@
     ],
     [
         "Sinh",
-        3458,
+        3457,
         3459
     ],
     [
@@ -1452,7 +1439,7 @@
     [
         "Zinh",
         6832,
-        6846
+        6848
     ],
     [
         "Bali",
@@ -1855,7 +1842,7 @@
     ],
     [
         "Zyyy",
-        11160,
+        11159,
         11263
     ],
     [
@@ -1963,7 +1950,7 @@
     [
         "Zyyy",
         11776,
-        11855
+        11858
     ],
     [
         "Hani",
@@ -2094,7 +2081,7 @@
     [
         "Bopo",
         12704,
-        12730
+        12735
     ],
     [
         "Zyyy",
@@ -2148,7 +2135,7 @@
     [
         "Hani",
         13312,
-        19893
+        19903
     ],
     [
         "Zyyy",
@@ -2158,7 +2145,7 @@
     [
         "Hani",
         19968,
-        40943
+        40956
     ],
     [
         "Yiii",
@@ -2213,17 +2200,17 @@
     [
         "Latn",
         42946,
-        42950
+        42954
     ],
     [
         "Latn",
-        42999,
+        42997,
         43007
     ],
     [
         "Sylo",
         43008,
-        43051
+        43052
     ],
     [
         "Zyyy",
@@ -2387,7 +2374,12 @@
     [
         "Latn",
         43878,
-        43879
+        43881
+    ],
+    [
+        "Zyyy",
+        43882,
+        43883
     ],
     [
         "Cher",
@@ -2689,7 +2681,7 @@
     [
         "Zyyy",
         65936,
-        65947
+        65948
     ],
     [
         "Grek",
@@ -3067,6 +3059,21 @@
         69246
     ],
     [
+        "Yezi",
+        69248,
+        69289
+    ],
+    [
+        "Yezi",
+        69291,
+        69293
+    ],
+    [
+        "Yezi",
+        69296,
+        69297
+    ],
+    [
         "Sogo",
         69376,
         69415
@@ -3075,6 +3082,11 @@
         "Sogd",
         69424,
         69465
+    ],
+    [
+        "Chrs",
+        69552,
+        69579
     ],
     [
         "Elym",
@@ -3122,7 +3134,7 @@
     [
         "Cakm",
         69942,
-        69958
+        69959
     ],
     [
         "Mahj",
@@ -3132,11 +3144,6 @@
     [
         "Shrd",
         70016,
-        70093
-    ],
-    [
-        "Shrd",
-        70096,
         70111
     ],
     [
@@ -3268,16 +3275,12 @@
     [
         "Newa",
         70656,
-        70745
-    ],
-    [
-        "Newa",
         70747
     ],
     [
         "Newa",
         70749,
-        70751
+        70753
     ],
     [
         "Tirh",
@@ -3352,6 +3355,45 @@
     [
         "Wara",
         71935
+    ],
+    [
+        "Diak",
+        71936,
+        71942
+    ],
+    [
+        "Diak",
+        71945
+    ],
+    [
+        "Diak",
+        71948,
+        71955
+    ],
+    [
+        "Diak",
+        71957,
+        71958
+    ],
+    [
+        "Diak",
+        71960,
+        71989
+    ],
+    [
+        "Diak",
+        71991,
+        71992
+    ],
+    [
+        "Diak",
+        71995,
+        72006
+    ],
+    [
+        "Diak",
+        72016,
+        72025
     ],
     [
         "Nand",
@@ -3488,6 +3530,10 @@
         73464
     ],
     [
+        "Lisu",
+        73648
+    ],
+    [
         "Taml",
         73664,
         73713
@@ -3620,6 +3666,15 @@
         94179
     ],
     [
+        "Kits",
+        94180
+    ],
+    [
+        "Hani",
+        94192,
+        94193
+    ],
+    [
         "Tang",
         94208,
         100343
@@ -3627,7 +3682,17 @@
     [
         "Tang",
         100352,
-        101106
+        101119
+    ],
+    [
+        "Kits",
+        101120,
+        101589
+    ],
+    [
+        "Tang",
+        101632,
+        101640
     ],
     [
         "Kana",
@@ -4151,17 +4216,7 @@
     [
         "Zyyy",
         127232,
-        127244
-    ],
-    [
-        "Zyyy",
-        127248,
-        127340
-    ],
-    [
-        "Zyyy",
-        127344,
-        127404
+        127405
     ],
     [
         "Zyyy",
@@ -4200,7 +4255,7 @@
     [
         "Zyyy",
         127744,
-        128725
+        128727
     ],
     [
         "Zyyy",
@@ -4210,7 +4265,7 @@
     [
         "Zyyy",
         128752,
-        128762
+        128764
     ],
     [
         "Zyyy",
@@ -4254,33 +4309,18 @@
     ],
     [
         "Zyyy",
+        129200,
+        129201
+    ],
+    [
+        "Zyyy",
         129280,
-        129291
-    ],
-    [
-        "Zyyy",
-        129293,
-        129393
-    ],
-    [
-        "Zyyy",
-        129395,
-        129398
+        129400
     ],
     [
         "Zyyy",
         129402,
-        129442
-    ],
-    [
-        "Zyyy",
-        129445,
-        129450
-    ],
-    [
-        "Zyyy",
-        129454,
-        129482
+        129483
     ],
     [
         "Zyyy",
@@ -4295,7 +4335,7 @@
     [
         "Zyyy",
         129648,
-        129651
+        129652
     ],
     [
         "Zyyy",
@@ -4305,17 +4345,47 @@
     [
         "Zyyy",
         129664,
-        129666
+        129670
     ],
     [
         "Zyyy",
         129680,
-        129685
+        129704
+    ],
+    [
+        "Zyyy",
+        129712,
+        129718
+    ],
+    [
+        "Zyyy",
+        129728,
+        129730
+    ],
+    [
+        "Zyyy",
+        129744,
+        129750
+    ],
+    [
+        "Zyyy",
+        129792,
+        129938
+    ],
+    [
+        "Zyyy",
+        129940,
+        129994
+    ],
+    [
+        "Zyyy",
+        130032,
+        130041
     ],
     [
         "Hani",
         131072,
-        173782
+        173789
     ],
     [
         "Hani",
@@ -4341,6 +4411,11 @@
         "Hani",
         194560,
         195101
+    ],
+    [
+        "Hani",
+        196608,
+        201546
     ],
     [
         "Zyyy",
