--- a/js/data/locale/scriptToRange.json
+++ b/js/data/locale/scriptToRange.json
@@ -51,9 +51,6 @@
             903
         ],
         [
-            1417
-        ],
-        [
             1541
         ],
         [
@@ -193,12 +190,12 @@
             11157
         ],
         [
-            11160,
+            11159,
             11263
         ],
         [
             11776,
-            11855
+            11858
         ],
         [
             12272,
@@ -283,6 +280,10 @@
             43867
         ],
         [
+            43882,
+            43883
+        ],
+        [
             64830,
             64831
         ],
@@ -350,7 +351,7 @@
         ],
         [
             65936,
-            65947
+            65948
         ],
         [
             66000,
@@ -523,15 +524,7 @@
         ],
         [
             127232,
-            127244
-        ],
-        [
-            127248,
-            127340
-        ],
-        [
-            127344,
-            127404
+            127405
         ],
         [
             127462,
@@ -559,7 +552,7 @@
         ],
         [
             127744,
-            128725
+            128727
         ],
         [
             128736,
@@ -567,7 +560,7 @@
         ],
         [
             128752,
-            128762
+            128764
         ],
         [
             128768,
@@ -602,28 +595,16 @@
             129197
         ],
         [
+            129200,
+            129201
+        ],
+        [
             129280,
-            129291
-        ],
-        [
-            129293,
-            129393
-        ],
-        [
-            129395,
-            129398
+            129400
         ],
         [
             129402,
-            129442
-        ],
-        [
-            129445,
-            129450
-        ],
-        [
-            129454,
-            129482
+            129483
         ],
         [
             129485,
@@ -635,7 +616,7 @@
         ],
         [
             129648,
-            129651
+            129652
         ],
         [
             129656,
@@ -643,11 +624,35 @@
         ],
         [
             129664,
-            129666
+            129670
         ],
         [
             129680,
-            129685
+            129704
+        ],
+        [
+            129712,
+            129718
+        ],
+        [
+            129728,
+            129730
+        ],
+        [
+            129744,
+            129750
+        ],
+        [
+            129792,
+            129938
+        ],
+        [
+            129940,
+            129994
+        ],
+        [
+            130032,
+            130041
         ],
         [
             917505
@@ -750,10 +755,10 @@
         ],
         [
             42946,
-            42950
+            42954
         ],
         [
-            42999,
+            42997,
             43007
         ],
         [
@@ -766,7 +771,7 @@
         ],
         [
             43878,
-            43879
+            43881
         ],
         [
             64256,
@@ -955,9 +960,6 @@
         ],
         [
             1369,
-            1416
-        ],
-        [
             1418
         ],
         [
@@ -1055,7 +1057,7 @@
         ],
         [
             2230,
-            2237
+            2247
         ],
         [
             2259,
@@ -1478,7 +1480,7 @@
             2893
         ],
         [
-            2902,
+            2901,
             2903
         ],
         [
@@ -1670,10 +1672,6 @@
     "Mlym": [
         [
             3328,
-            3331
-        ],
-        [
-            3333,
             3340
         ],
         [
@@ -1703,7 +1701,7 @@
     ],
     "Sinh": [
         [
-            3458,
+            3457,
             3459
         ],
         [
@@ -2229,7 +2227,7 @@
         ],
         [
             12704,
-            12730
+            12735
         ]
     ],
     "Hani": [
@@ -2261,11 +2259,11 @@
         ],
         [
             13312,
-            19893
+            19903
         ],
         [
             19968,
-            40943
+            40956
         ],
         [
             63744,
@@ -2276,8 +2274,12 @@
             64217
         ],
         [
+            94192,
+            94193
+        ],
+        [
             131072,
-            173782
+            173789
         ],
         [
             173824,
@@ -2298,6 +2300,10 @@
         [
             194560,
             195101
+        ],
+        [
+            196608,
+            201546
         ]
     ],
     "Yiii": [
@@ -2354,7 +2360,7 @@
         ],
         [
             6832,
-            6846
+            6848
         ],
         [
             7376,
@@ -2679,7 +2685,7 @@
     "Sylo": [
         [
             43008,
-            43051
+            43052
         ]
     ],
     "Xpeo": [
@@ -2948,6 +2954,9 @@
         [
             42192,
             42239
+        ],
+        [
+            73648
         ]
     ],
     "Bamu": [
@@ -3078,7 +3087,7 @@
         ],
         [
             69942,
-            69958
+            69959
         ]
     ],
     "Merc": [
@@ -3118,10 +3127,6 @@
     "Shrd": [
         [
             70016,
-            70093
-        ],
-        [
-            70096,
             70111
         ]
     ],
@@ -3567,14 +3572,11 @@
     "Newa": [
         [
             70656,
-            70745
-        ],
-        [
             70747
         ],
         [
             70749,
-            70751
+            70753
         ]
     ],
     "Osge": [
@@ -3597,7 +3599,11 @@
         ],
         [
             100352,
-            101106
+            101119
+        ],
+        [
+            101632,
+            101640
         ]
     ],
     "Gonm": [
@@ -3761,6 +3767,68 @@
         ],
         [
             123647
+        ]
+    ],
+    "Chrs": [
+        [
+            69552,
+            69579
+        ]
+    ],
+    "Diak": [
+        [
+            71936,
+            71942
+        ],
+        [
+            71945
+        ],
+        [
+            71948,
+            71955
+        ],
+        [
+            71957,
+            71958
+        ],
+        [
+            71960,
+            71989
+        ],
+        [
+            71991,
+            71992
+        ],
+        [
+            71995,
+            72006
+        ],
+        [
+            72016,
+            72025
+        ]
+    ],
+    "Kits": [
+        [
+            94180
+        ],
+        [
+            101120,
+            101589
+        ]
+    ],
+    "Yezi": [
+        [
+            69248,
+            69289
+        ],
+        [
+            69291,
+            69293
+        ],
+        [
+            69296,
+            69297
         ]
     ]
 }
